<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
	android:id="@+id/ctx_reset"
	android:title="@string/ctx_reset">
</item>
<item
	android:id="@+id/ctx_prepStmt"
	android:title="@string/ctx_prepStmt">
	<menu>
		<item 
			android:id="@+id/ctx_sub_ok"
	    	android:title="@string/ctx_sub_ok" />
		<item 
	    	android:id="@+id/ctx_sub_sponsors_main"
	    	android:title="@string/ctx_sub_sponsors_main" />
		<item 
	    	android:id="@+id/ctx_sub_sponsors_offical"
	    	android:title="@string/ctx_sub_sponsors_offical" />
	    <item 
	    	android:id="@+id/ctx_sub_sponsors_1_site"
	    	android:title="@string/ctx_sub_sponsors_1_site" />
	   	<item 
	    	android:id="@+id/ctx_sub_sponsors_12_site"
	    	android:title="@string/ctx_sub_sponsors_12_site" />
		<item 
	    	android:id="@+id/ctx_sub_sponsors_14_site"
	    	android:title="@string/ctx_sub_sponsors_14_site" />
	</menu>
</item>
<item
	android:id="@+id/ctx_settings"
	android:title="@string/ctx_settings">
</item>
<item
	android:id="@+id/ctx_quit"
	android:title="@string/ctx_quit">
</item>
</menu>